senpai/tests/cases/error/extern_fn_defined_struct_return.sen
struct Point:
    x: I64
    y: I64

extern fn make_point() -> Point

fn main():
    let p = make_point()
